added 2 food items

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	
   <div class="slider">
     <div class="slides">
-      <button class="slide selected" onclick="switchSrc(this, 'Food1')" style="display: inline-block; font-size: 12px;">Chair</button>
-	  <button class="slide" onclick="switchSrc(this, 'Food2')" style="display: inline-block; font-size: 12px;">Table</button>
+      <button class="slide selected" onclick="switchSrc(this, 'Food1')" style="display: inline-block; font-size: 12px;">Risotto</button>
+	  <button class="slide" onclick="switchSrc(this, 'Kebab')" style="display: inline-block; font-size: 12px;">Kebab</button>
 	  
 	  </div>
   </div>
@@ -270,7 +270,7 @@ anime({
    position: fixed;
      bottom: 18px;
     right: 10px;
-  background-color: #9A673A;
+  background-color: #c86a4b;
   border: none;
   border-radius: 15px;
   box-shadow: 0 1px #999;
@@ -330,7 +330,7 @@ position: relative;
 .ml8 .circle-dark {
   width: 2.13em;
   height: 2.13em;
-  background-color: #89B547;
+  background-color: #72bcd4;
   border-radius: 2.4em;
   z-index: 1;
 }
@@ -340,7 +340,7 @@ right:-0.0275em;
 top:-0.02735em;
   border-radius: 2.4em;
   background-color: transparent;
-  border: 2px dashed #9A673A;
+  border: 2px dashed #d48a72;
   width: 2.4em;
   height: 2.4em;
 }
