added 3 food items

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="slides">
       <button class="slide selected" onclick="switchSrc(this, 'Food1')" style="display: inline-block; font-size: 12px;">Risotto</button>
 	  <button class="slide" onclick="switchSrc(this, 'Kebab')" style="display: inline-block; font-size: 12px;">Kebab</button>
-	  
+	  <button class="slide" onclick="switchSrc(this, 'Takoyaki')" style="display: inline-block; font-size: 12px;">Takoyaki</button>
 	  </div>
   </div>
 </model-viewer>
