Changed the food items

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
   <h1 class="ml8">
   <span class="letters-container">
-    <span class="letters letters-left"style="text-align: center; display: inline-block;">Cafe Name</span>
+    <span class="letters letters-left"style="text-align: center; display: inline-block;">Cafe Azzure</span>
   </span>
   <span class="circle circle-white"></span>
   <span class="circle circle-dark"></span>
@@ -50,7 +50,7 @@
   <div class="slider">
     <div class="slides">
       <button class="slide selected" onclick="switchSrc(this, 'Food1')" style="display: inline-block; font-size: 12px;">Risotto</button>
-	  <button class="slide" onclick="switchSrc(this, 'Kebab')" style="display: inline-block; font-size: 12px;">Kebab</button>
+	  <button class="slide" onclick="switchSrc(this, 'Pancake')" style="display: inline-block; font-size: 12px;">Pancake</button>
 	  <button class="slide" onclick="switchSrc(this, 'Takoyaki')" style="display: inline-block; font-size: 12px;">Takoyaki</button>
 	  </div>
   </div>
