--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ body{
 }
   
   #ar-button {
+  z-index:15;
     background-repeat: no-repeat;
     background-size: 20px 20px;
     background-position: 12px 50%;
