--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<p id="contentDesc"></p>
 	</div>
 	
-	  <button id="slideArrow"  style="display: inline-block; font-size: 12px;">></button>
+	 <!-- <button id="slideArrow"  style="display: inline-block; font-size: 12px;">></button>-->
   <div class="slider">
   
     <div class="slides">
@@ -258,7 +258,7 @@ body{
     background-position: center;
     background-color: #fff;
 	 color:#4285f4;
-	    background:rgba(255,255,255,0.6);
+	    background:rgba(255,255,255,0.9);
   backdrop-filter: blur(3px);
     margin-right: 10px;
     border-radius: 10px;
@@ -419,7 +419,7 @@ top:-0.02735em;
   font-size: 11px;
   text-align: left;
   outline: none;
-  text-shadow: 0px 1px #A9A9A9;
+
   color: #fff;
    position: absolute;
      bottom: 55px;
@@ -430,7 +430,7 @@ top:-0.02735em;
  z-index:10;
   font-size: 11px;
   text-align: left;
-   text-shadow: 0px 1px #A9A9A9;
+  
   color: #fff;
    position: absolute;
      bottom: 55px;
@@ -442,7 +442,7 @@ top:-0.02735em;
   font-size: 9px;
   text-align: left;
   outline: none;
-  text-shadow: 0px 1px #A9A9A9;
+ 
   color: #fff;
    position: absolute;
      top: 30px;
@@ -463,8 +463,7 @@ top:-0.02735em;
     right: 10px;  
   border: none;
   border-radius: 15px;
-  box-shadow: 0 1px #999;
-    background:rgba(54,114,255,0.3);
+    background:rgba(54,114,255,0.7);
   backdrop-filter: blur(4px);
 } 
 </style>
