--- a/index.html
+++ b/index.html
@@ -526,13 +526,13 @@ top:-0.02735em;
   background-color: #111;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
+  padding-top: 80px;
   	    background:rgba(255,255,255,0.85);
   backdrop-filter: blur(3px);
 }
 
 .sidebar a {
-  padding: 8px 8px 8px 12px;
+  padding: 10px 8px 8px 12px;
   text-decoration: none;
   font-size: 15px;
   color: #818181;
@@ -557,7 +557,7 @@ top:-0.02735em;
   cursor: pointer;
   background-color: 	#696969;
   color: white;
-  margin-top:7px;
+  margin-top:10%;
   margin-left:-5px;
   padding: 3px 8px;
   border: none;
